Add PHP and Drupal 7 resources
Adding PHP as a page, updating information for Drupal 7 and 8.

--- a/drupal/7.md
+++ b/drupal/7.md
@@ -1,3 +1,19 @@
 # Drupal 7
 
+## Local development
++ [Acquia Dev Desktop](https://dev.acquia.com/downloads)
+
+## Drush
++ [Drush Documentation](http://docs.drush.org/en/master/)
++ [Drush Commands](https://drushcommands.com/drush-7x/)
+
+## Theming
++ [Creating a sub-theme](https://www.drupal.org/node/225125)
++ [960 Robots](https://www.drupal.org/project/ninesixtyrobots)
+
+## Tutorials
++ [Become a Drupal Developer](https://drupalize.me/guide/become-drupal-developer)
++ [Theming Basics for Drupal 7](https://drupalize.me/series/theming-basics-drupal-7-series)
++ [Work with Drupal Themes and Front-End](https://drupalize.me/guide/work-drupal-themes-and-front-end)
+
 Go back: [developer-resources](../README.md)
