--- a/drupal/8.md
+++ b/drupal/8.md
@@ -4,6 +4,7 @@ Drupal 8 is very different for theming and custom development from Drupal 7.  Dr
 ## Local development
 + [UMN Drupal 8 Enterprise Docker](https://pages.github.umn.edu/ici-drupal/umndrupal8-docker/)
 + [Acquia Dev Desktop](https://dev.acquia.com/downloads) (Only works through version 8.3)
++ [Drush Commands](https://drushcommands.com/)
 
 ## Yaml
 + [Start](http://www.yaml.org/start.html)
@@ -13,6 +14,7 @@ Drupal 8 is very different for theming and custom development from Drupal 7.  Dr
 + [Twig for template designers](https://twig.symfony.com/doc/2.x/templates.html)
 + [Drupal theming fundatmentals](https://www.lullabot.com/articles/drupal-8-theming-fundamentals-part-1)
 + [CSS architecture](https://www.drupal.org/node/1887918)
++ [Enhancing CKEditor in Drupal 8](https://www.drupalaid.com/blog/enhancing-ckeditor-in-drupal-8)
 
 ## Migrate Google Sheets
 + [Drush commands](https://drushcommands.com/drush-8x/migrate/migrate-import/)
