Add Drupal presentation to Migration section

--- a/drupal/8.md
+++ b/drupal/8.md
@@ -19,5 +19,6 @@ Drupal 8 is very different for theming and custom development from Drupal 7.  Dr
 ## Migrate Google Sheets
 + [Drush commands](https://drushcommands.com/drush-8x/migrate/migrate-import/)
 + [OCM Study Spaces module](https://github.umn.edu/asrweb/ocm_study_spaces)
++ [Migrations in Drupal 8](https://z.umn.edu/drupal-migration)
 
 Go back: [developer-resources](../README.md)
